dcp - Checkpoint to final Terminaux 7.0 stage
---

This is the last stage of the Terminaux 7.0 migration stage.

Chatbot AI will be added to Nitrocid during this stage, and no features
may be added before the real development of 0.2.0 starts.

---

Type: dcp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -65,6 +65,7 @@
         <NitrocidReleaseSpecifier>REL</NitrocidReleaseSpecifier>
         <NitrocidReleaseSpecifier Condition="'$(Configuration)' == 'Debug'">DEV</NitrocidReleaseSpecifier>
         <DefineConstants>SPECIFIER$(NitrocidReleaseSpecifier);$(NitrocidFlags.Replace(",",";"))</DefineConstants>
+        <NoWarn>$(NoWarn);NU1605</NoWarn>
     </PropertyGroup>
     <!-- KS Platform Information End -->
 
