--- a/public/Nitrocid.Templates/templates/KSModVB/KSModVB.vbproj
+++ b/public/Nitrocid.Templates/templates/KSModVB/KSModVB.vbproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="KS" Version="0.1.2.18" />
+    <PackageReference Include="KS" Version="0.1.2.19" />
   </ItemGroup>
 
 </Project>
