--- a/public/Nitrocid.Addons/Nitrocid.Extras.ChatbotAI/Nitrocid.Extras.ChatbotAI.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ChatbotAI/Nitrocid.Extras.ChatbotAI.csproj
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <Description>Nitrocid KS Extras - Chatbot AI</Description>
     <AssemblyTitle>Nitrocid KS Extras - Chatbot AI</AssemblyTitle>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenAI" Version="2.2.0" />
     <PackageReference Update="LocaleStation" Version="1.3.2" />
   </ItemGroup>
 
