--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -2,9 +2,9 @@ name: Build Project (Debian Package, Lintian)
 
 on:
   push:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.2.x-saas", "v0.2.0.x-saas" ]
   pull_request:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.2.x-saas", "v0.2.0.x-saas" ]
 
 jobs:
   build:
@@ -40,8 +40,8 @@ jobs:
         run: |
           mv debian ..
           mv .github ..
-          tar cfv ../nitrocid-28_4.0.28.7-0.2.0.0.orig.tar .
-          xz ../nitrocid-28_4.0.28.7-0.2.0.0.orig.tar
+          tar cfv ../nitrocid-28_4.0.28.17-0.2.0.0~beta.orig.tar .
+          xz ../nitrocid-28_4.0.28.17-0.2.0.0~beta.orig.tar
           mv ../debian .
 
       - name: Build package
