--- a/public/Nitrocid.Templates/templates/KSMod/KSMod.csproj
+++ b/public/Nitrocid.Templates/templates/KSMod/KSMod.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0" />
+    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0-beta" />
   </ItemGroup>
 
 </Project>
