add - prt - Added Clochroma Analog (pt. 1)
---

The crucial features are not implemented yet...

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/2

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
@@ -8165,5 +8165,23 @@
                 ]
             }
         ]
+    },
+    {
+        "Name": "ClochromaAnalog",
+        "Desc": "NKS_SCREENSAVERPACKS_CLOCHROMAANALOG_SETTINGS_DESC",
+        "Keys": [
+            {
+                "Name": "NKS_SCREENSAVERPACKS_CLOCHROMA_SETTINGS_BRIGHT_NAME",
+                "Type": "SBoolean",
+                "Variable": "ClochromaBright",
+                "Description": "NKS_SCREENSAVERPACKS_CLOCHROMA_SETTINGS_BRIGHT_DESC"
+            },
+            {
+                "Name": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_NAME",
+                "Type": "SInt",
+                "Variable": "ClochromaDelay",
+                "Description": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_DESC"
+            }
+        ]
     }
 ]
