fix - reg - Fixed release changelogs not working
---

We've fixed the release changelogs resource not being detected due to the
Nitrocid.Base migration.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Nitrocid.Base.csproj
+++ b/public/Nitrocid.Base/Nitrocid.Base.csproj
@@ -78,7 +78,7 @@
   <!-- KS Release Changelogs -->
   <ItemGroup>
     <EmbeddedResource Include="..\..\vnd\changes.chg">
-      <LogicalName>Nitrocid.Resources.changes.chg</LogicalName>
+      <LogicalName>Nitrocid.Base.Resources.changes.chg</LogicalName>
       <Visible>false</Visible>
     </EmbeddedResource>
   </ItemGroup>
