int - Clone submodules in the LP PPA job
---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.gitlab/workflows/release.yml
+++ b/.gitlab/workflows/release.yml
@@ -50,6 +50,8 @@ prepare_job:
 
 launchpadppa_job:
   stage: launchpadppa
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   image: ubuntu:noble
   rules:
     - if: $CI_COMMIT_TAG
