int - Added docgen CI
---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 stages:
   - release
   - launchpadppa
+  - apidocverify
+  - apidoc
 
 include:
   - '.gitlab/workflows/release.yml'
+  - '.gitlab/workflows/docgen.yml'
