imp - Updated SourceLink to use GitLab
---

We've updated the SourceLink packages to use GitLab as a result of the
recent migration.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,7 +13,7 @@
         <WarningsAsErrors>CS9057,CS8002,nullable</WarningsAsErrors>
         <EnableSourceControlManagerQueries>true</EnableSourceControlManagerQueries>
         <SignAssembly>True</SignAssembly>
-        <RepositoryUrl>https://github.com/Aptivi/Nitrocid.git</RepositoryUrl>
+        <RepositoryUrl>https://gitlab.com/aptivi/main/Nitrocid.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -71,7 +71,7 @@
 
     <!-- KS SourceLink -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.SourceLink.GitLab" Version="8.0.0" PrivateAssets="all" />
     </ItemGroup>
     <Target Name="EnsureCommitShaInclusion" BeforeTargets="GenerateNuspec" Condition="'$(Configuration)' == 'Debug' And '$(SourceRevisionId)' != '' And '$(ContinuousIntegrationBuild)' == 'true'">
         <ReadLinesFromFile File="$(RootPath)/private/Nitrocid.BuildTargets/obj/.dtp">
