imp - Updated SourceLink to use GitLab
---

We've updated the SourceLink packages to use GitLab as a result of the
recent migration.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -65,10 +65,10 @@
 
     <!-- KS SourceLink -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.SourceLink.GitLab" Version="8.0.0" PrivateAssets="all" />
     </ItemGroup>
     <PropertyGroup>
-        <RepositoryUrl>https://github.com/Aptivi/Nitrocid.git</RepositoryUrl>
+        <RepositoryUrl>https://gitlab.com/aptivi/main/Nitrocid.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
