--- a/public/Nitrocid.Analyzers/Nitrocid.Analyzers.Package/Nitrocid.Analyzers.Package.csproj
+++ b/public/Nitrocid.Analyzers/Nitrocid.Analyzers.Package/Nitrocid.Analyzers.Package.csproj
@@ -13,7 +13,7 @@
     <Authors>Aptivi</Authors>
     <PackageDescription>Simulates our future-planned kernel</PackageDescription>
     <!-- URL settings -->
-    <PackageProjectUrl>https://github.com/Aptivi/Nitrocid</PackageProjectUrl>
+    <PackageProjectUrl>https://gitlab.com/aptivi/main/Nitrocid</PackageProjectUrl>
     <PackageIcon>OfficialAppIcon-NitrocidKS-512.png</PackageIcon>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
     <PackageReleaseNotes>Detailed explanation: https://aptivi.gitbook.io/aptivi/nitrocid-ks-manual/versions-and-compatibility/version-release-notes/v0.1.x.x-series</PackageReleaseNotes>
