--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Aptivi CEO <ceo@aptivi.anonaddy.com>
 Build-Depends: debhelper-compat (= 12), dotnet-sdk-8.0 (>= 8.0.100), tzdata (>= 2021a), libjack0 (>= 1:0.125.0-3), libportaudio2 (>= 19.6.0), libopenal1 (>= 1:1.19.1), libsdl2-2.0-0 (>= 2.0.9), libpulse0 (>= 12.2), libaudio2 (>= 1.9.4)
 Standards-Version: 4.4.0
 Homepage: https://aptivi.gitbook.io/nitrocid-manual
-Vcs-Browser: https://github.com/Aptivi/Nitrocid
-Vcs-Git: https://github.com/Aptivi/Nitrocid.git
+Vcs-Browser: https://gitlab.com/aptivi/main/Nitrocid
+Vcs-Git: https://gitlab.com/aptivi/main/Nitrocid.git
 
 Package: nitrocid-28
 Architecture: amd64 arm64
